--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,3 +2,13 @@
 
 welcome.title=jee7 jsf vorlagen
 welcome.text=jee7 jsf vorlagen
+
+# listCampaigns.xhtml
+listCampaigns.my_campaigns=meine aktionen
+listCampaigns.name=Name
+listCampaigns.target_amount=Spendenziel
+listCampaigns.donated_so_far=bisher gespendet
+listCampaigns.edit=Editieren
+listCampaigns.list_donations=Spendenliste
+listCampaigns.form=Formular
+listCampaigns.add_campaign=Aktion hinzufügen
