--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -12,6 +12,10 @@ listCampaigns.edit=Editieren
 listCampaigns.list_donations=Spendenliste
 listCampaigns.form=Formular
 listCampaigns.add_campaign=Aktion hinzufügen
+listCampaigns.ask_delete_campaign=Aktion wirklich löschen?
+listCampaigns.delete_campaign=Aktion löschen
+listCampaigns.yes=Ja
+listCampaigns.no=Nein
 
 # editCampaign.xhtml
 editCampaign.add_new_campaign=Neue Aktion anlegen
