--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,6 +12,10 @@ listCampaigns.edit=Edit
 listCampaigns.list_donations=List donations
 listCampaigns.form=Form
 listCampaigns.add_campaign=Add campaign
+listCampaigns.ask_delete_campaign=Really delete campaign?
+listCampaigns.delete_campaign=Delete campaign
+listCampaigns.yes=Yes
+listCampaigns.no=No
 
 # editCampaign.xhtml
 editCampaign.add_new_campaign=Add a new campaign
