donations can be listed

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -4,28 +4,28 @@ welcome.title=jee7 jsf vorlagen
 welcome.text=jee7 jsf vorlagen
 
 # listCampaigns.xhtml
-listCampaigns.my_campaigns=meine aktionen
+listCampaigns.my_campaigns=meine Auktionen
 listCampaigns.name=Name
 listCampaigns.target_amount=Spendenziel
 listCampaigns.donated_so_far=bisher gespendet
 listCampaigns.edit=Editieren
 listCampaigns.list_donations=Spendenliste
 listCampaigns.form=Formular
-listCampaigns.add_campaign=Aktion hinzufügen
-listCampaigns.ask_delete_campaign=Aktion wirklich löschen?
-listCampaigns.delete_campaign=Aktion löschen
+listCampaigns.add_campaign=Auktion hinzufügen
+listCampaigns.ask_delete_campaign=Auktion wirklich löschen?
+listCampaigns.delete_campaign=Auktion löschen
 listCampaigns.yes=Ja
 listCampaigns.no=Nein
 
 # editCampaign.xhtml
-editCampaign.add_new_campaign=Neue Aktion anlegen
-editCampaign.edit_campaign=Aktionsdaten editieren
+editCampaign.add_new_campaign=Neue Auktion anlegen
+editCampaign.edit_campaign=Auktionsdaten editieren
 editCampaign.general=Allgemein
 editCampaign.name=Name
-editCampaign.campaign_name_validation=Der Name einer Aktion muss min. 4 und darf max. 30 Zeichen lang sein.
-editCampaign.name_of_the_campaign=Name der Spendenaktion
+editCampaign.campaign_name_validation=Der Name einer Auktion muss min. 4 und darf max. 30 Zeichen lang sein.
+editCampaign.name_of_the_campaign=Name der SpendenAuktion
 editCampaign.target_amount=Spendenziel
-editCampaign.target_amount_validation=Das Spendenziel für die Aktion muss min. 10 Euro sein.
+editCampaign.target_amount_validation=Das Spendenziel für die Auktion muss min. 10 Euro sein.
 editCampaign.donation_amount=Spendenbetrag
 editCampaign.donation_amount_validation=Der Spendenbetrag muss min. 1 Euro sein.
 editCampaign.bank_account=Bankverbindung
@@ -33,3 +33,26 @@ editCampaign.iban=IBAN
 editCampaign.name_of_bank=Name der Bank
 editCampaign.save=Speichern
 editCampaign.cancel=Abbrechen
+
+#listDonations.xhtml
+listDonations.title=Liste von Spendern
+
+# listDonations.xhtml
+listDonations.donation_list=Spenderliste
+listDonations.beneficiary_account=Empfängerkonto
+listDonations.iban=IBAN
+listDonations.name=Name
+listDonations.name_of_bank=Name der Bank
+listDonations.donation_amount=Spendenbetrag
+listDonations.receipt=Quittung
+listDonations.yes=ja
+listDonations.no=nein
+listDonations.status=Status
+listDonations.status.TRANSFERRED=überwiesen
+listDonations.status.IN_PROCESS=in Bearbeitung
+
+# editDonationForm.xhtml
+editDonationForm.edit_donation_form=Spendenformular bearbeiten
+editDonationForm.background_color=Hintergrundfarbe
+editDonationForm.text_color=Textfarbe
+editDonationForm.form_url=URL des Formulars
