--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,3 +33,23 @@ editCampaign.iban=IBAN
 editCampaign.name_of_bank=Name of Bank
 editCampaign.save=Save
 editCampaign.cancel=Cancel
+
+# listDonations.xhtml
+listDonations.donation_list=List of donations
+listDonations.beneficiary_account=Beneficiary account
+listDonations.iban=IBAN
+listDonations.name=Name
+listDonations.name_of_bank=Name of Bank
+listDonations.donation_amount=Donation amount
+listDonations.receipt=Receipt
+listDonations.yes=yes
+listDonations.no=no
+listDonations.status=Status
+listDonations.status.TRANSFERRED=transferred
+listDonations.status.IN_PROCESS=in process
+
+# editDonationForm.xhtml
+editDonationForm.edit_donation_form=Edit donation form
+editDonationForm.background_color=Background color
+editDonationForm.text_color=Text color
+editDonationForm.form_url=Form URL
